umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@rdkit_3303_NNC(=S)Nc1ccc(Cl)cc1_29bb.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C7ClN3S
    atom_count: 12
    bond_count: 12
